apps/base/healthz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-healthz
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-healthz
  template:
    metadata:
      labels:
        app: dummy-healthz
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
