apps/base/healthz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-healthz
  namespace: ingress-nginx
spec:
  selector:
    app: dummy-healthz
  ports:
    - port: 80
      targetPort: 80
